--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "postcss": "^8.4.23",
         "tailwindcss": "^3.3.2",
         "vite": "^4.3.8"
+    },
+    "dependencies": {
+        "dropzone": "^6.0.0-beta.2"
     }
 }
